tests/types_first/types_first.exp
Error -------------------------------------------------------------------------------------------- import-value2.js:4:10

Cannot return `x` because number [1] is incompatible with string [2]. [incompatible-return]

   import-value2.js:4:10
   4|   return x;
               ^

References:
   import-value2.js:3:22
   3| export function f(x: number): string {
                           ^^^^^^ [1]
   import-value2.js:3:31
   3| export function f(x: number): string {
                                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------ test-multiple-export-2.js:6:2

Cannot cast `a.f` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test-multiple-export-2.js:6:2
   6| (a.f: number);
       ^^^

References:
   multiple-export-2.js:8:13
   8|   static f: string = ""
                  ^^^^^^ [1]
   test-multiple-export-2.js:6:7
   6| (a.f: number);
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:3:19

Cannot assign `require(...)` to `n` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:19
   3| const n: string = require('./import-value1'); // error: number ~/~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   import-value1.js:3:18
   3| module.exports = 0;
                       ^ [1]
   test.js:3:10
   3| const n: string = require('./import-value1'); // error: number ~/~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:2

Cannot cast `n` to `T` because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:10:2
   10| (n: T); // error: string ~/~> number
        ^

References:
   test.js:3:10
    3| const n: string = require('./import-value1'); // error: number ~/~> string
                ^^^^^^ [1]
   test.js:10:5
   10| (n: T); // error: string ~/~> number
           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:11:2

Cannot cast `f(...)` to `S` because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:11:2
   11| (f(""): S); // error: string (argument) ~/~> number, string (return) ~/~> number
        ^^^^^

References:
   import-value2.js:3:31
    3| export function f(x: number): string {
                                     ^^^^^^ [1]
   test.js:11:9
   11| (f(""): S); // error: string (argument) ~/~> number, string (return) ~/~> number
               ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:11:4

Cannot call `f` with empty string bound to `x` because string [1] is incompatible with number [2]. [incompatible-call]

   test.js:11:4
   11| (f(""): S); // error: string (argument) ~/~> number, string (return) ~/~> number
          ^^ [1]

References:
   import-value2.js:3:22
    3| export function f(x: number): string {
                            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:12:2

Cannot cast `o` to `O` because number [1] is incompatible with string [2] in property `x`. [incompatible-cast]

   test.js:12:2
   12| (o: O); // error: number (property x) <~/~> string
        ^

References:
   import-value3.js:5:6
    5|   x: 0,
            ^ [1]
   import-type5.js:6:6
    6|   x: string;
            ^^^^^^ [2]



Found 7 errors
